--- a/Plotly_Dash/jupyter_dash.ipynb
+++ b/Plotly_Dash/jupyter_dash.ipynb
@@ -2,20 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Invalid display argument 'internal'\n    Valid arguments: ['jupyterlab', 'inline', 'external']",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-7b8c7474da43>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;31m# Run app and display result inline in the notebook\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;31m# app.run_server(mode='external') #external\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m \u001b[0mapp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_server\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhost\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'0.0.0.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m8050\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'internal'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/jupyter_dash/jupyter_app.py\u001b[0m in \u001b[0;36mrun_server\u001b[0;34m(self, mode, width, height, inline_exceptions, **kwargs)\u001b[0m\n\u001b[1;32m    184\u001b[0m                     \u001b[0;34m\"Invalid display argument {display}\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    185\u001b[0m                     \"    Valid arguments: {valid_display_values}\".format(\n\u001b[0;32m--> 186\u001b[0;31m                         \u001b[0mdisplay\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrepr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_display_values\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalid_display_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    187\u001b[0m                     )\n\u001b[1;32m    188\u001b[0m                 )\n",
-      "\u001b[0;31mValueError\u001b[0m: Invalid display argument 'internal'\n    Valid arguments: ['jupyterlab', 'inline', 'external']"
-     ]
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://10.20.17.47:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f1118d56c90>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -53,8 +61,8 @@
     "        render_mode=\"webgl\", title=\"Tips\"\n",
     "    )\n",
     "# Run app and display result inline in the notebook\n",
-    "# app.run_server(mode='external') #external\n",
-    "app.run_server(host='0.0.0.0',debug=True, port=8050, mode='internal')"
+    "# app.run_server(host='0.0.0.0',debug=True, port=8050, mode='external')\n",
+    "app.run_server(host='10.20.17.47',debug=True, port=8050, mode='inline')"
    ]
   },
   {
@@ -73,6 +81,69 @@
    "source": [
     "import dash_core_components\n",
     "print(dash_core_components.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://10.20.17.47:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f1118dd4d50>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "# import dash\n",
+    "from jupyter_dash import JupyterDash\n",
+    "\n",
+    "import dash_core_components as dcc\n",
+    "import dash_html_components as html\n",
+    "\n",
+    "external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
+    "\n",
+    "# app = dash.Dash(__name__, external_stylesheets=external_stylesheets)\n",
+    "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+    "\n",
+    "app.layout = html.Div(children=[\n",
+    "    html.H1(children='Hello Dash'),\n",
+    "\n",
+    "    html.Div(children='''\n",
+    "        Dash: A web application framework for Python.\n",
+    "    '''),\n",
+    "\n",
+    "    dcc.Graph(\n",
+    "        id='example-graph',\n",
+    "        figure={\n",
+    "            'data': [\n",
+    "                {'x': [1, 2, 3], 'y': [5, 1, 2], 'type': 'bar', 'name': 'SF'},\n",
+    "                {'x': [1, 2, 3], 'y': [2, 4, 5], 'type': 'bar', 'name': u'Montréal'},\n",
+    "            ],\n",
+    "            'layout': {\n",
+    "                'title': 'Dash Data Visualization'\n",
+    "            }\n",
+    "        }\n",
+    "    )\n",
+    "])\n",
+    "\n",
+    "app.run_server(host='10.20.17.47',debug=True, port=8050, mode='inline')"
    ]
   },
   {
